@@ -1,6 +1,6 @@
 Package: TileDBArray
-Version: 1.15.2
-Date: 2024-09-06
+Version: 1.15.3
+Date: 2024-09-30
 Title: Using TileDB as a DelayedArray Backend
 Description: Implements a DelayedArray backend for reading and
     writing dense or sparse arrays in the TileDB format. The
